...
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/guideline_66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="24dp"
...
